package pt.trekio.misc

enum class TrailDifficulty {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED,
    UNKNOWN,
}
