@startuml
'https://plantuml.com/class-diagram

hide empty members
skinparam linetype ortho

enum UserRank {
    NEW
    VERIFIED
}

enum TrailDifficulty {
    BEGINNER
    INTERMEDIATE
    ADVANCED
}

entity User {
    * **id**: number <<generated>>
    * username: text
    * email: text
    --
    * passwordValidation: text?
    * rank: UserRank
}

entity Token {
    * **uid**: number <<FK>>
    * **tokenValidation**: text
    --
    * expiredAt: number
}

entity Trail {
    * **id**: number <<generated>>
    * name: text
    --
    * creator: number <<FK>>
    * start: text
    * end: text
    * path: array<text>
    * distance: number
    * difficulty: TrailDifficulty
    * parent: number <<FK>>
}

entity Hike {
    * **id**: number <<generated>>
    --
    * trail: number <<FK>>
    * hiker: number <<FK>>
    * entryPoint: text
    exitPoint: text
    * startingTime: number
    endingTime: number
}

entity HikeMembers {
    * **hikeId**: number <<FK>>
    * **hikerId**: number <<FK>>
    --
    * curr_location: string
}

entity OAuthCodes {
    * **code**: text
    --
    * email: text <<FK>>
    * username: text <<FK>>
    * expiredAt: number
}

User o-up- UserRank
Trail o-- TrailDifficulty

User ||-o| Token
Token -[hidden]right- OAuthCodes
User ||-left{ OAuthCodes

User ||-down-o{ Trail
User ||--o{ Hike
Trail ||-o{ Hike
Hike ||-right-|{ HikeMembers
User ||-o| HikeMembers
@enduml